--- a/Labs/Lab2/Ex1/index.html
+++ b/Labs/Lab2/Ex1/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>N220 Labs</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Adam Cowher Lab 2</h1>
-    <a href="Labs/Lab2/index.html">Even bigger</a>
-<br>
-    <a href="Labs/Lab2/index.html">Warp</a>
-<br>
-    <a href="Labs/Lab2/index.html">Bounce</a>
+    
+
+    <script src="app.js"></script>
 </body>
 </html>
