Started Lab 1 + did in-class exercise for 1/20/2022

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>N220 Labs</title>
 </head>
 <body>
-    <h1>Adam Cowher Lab 2</h1>
-    <a href="Labs/Lab2/index.html">Even bigger</a>
+    <h1>Adam Cowher N220 Labs</h1>
+    <a href="Labs/Lab1/index.html">Lab 1</a>
 <br>
-    <a href="Labs/Lab2/index.html">Warp</a>
+    <a href="Labs/Lab2/index.html">Lab 2</a>
 <br>
-    <a href="Labs/Lab2/index.html">Bounce</a>
 </body>
 </html>
