--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <h1>Adam Cowher N220 Labs</h1>
+    <h3>Lab 1</h3> 
     <a href="Labs/Lab1/index.html">Lab 1</a>
 <br>
-    <a href="Labs/Lab2/index.html">Lab 2</a>
+    <h3>Lab 2</h3>  
+    <a href="Labs/Lab2/Ex1/index.html">Ex.1</a>
+    <br><br>
+    <a href="Labs/Lab2/Ex2/index.html">Ex.2</a>
+    <br><br>
+    <a href="Labs/Lab2/Ex5/index.html">Ex.5</a>
 <br>
 </body>
 </html>
