--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     <br><br>
     <a href="Labs/Lab2/Ex5/index.html">Ex.5</a>
 <br>
+<h3>Lab 3</h3>  
+    <a href="Labs/Lab3/DrawingDrawer/">Drawing Drawer</a>
+    <br><br>
+    <a href="Labs/Lab3/RedRemover/">Red Remover</a>
+    <br><br>
+    <a href="Labs/Lab3/PolarPoints/">Polar Points</a>
 </body>
 </html>
