--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <a href="Labs/Lab2/Ex5/index.html">Ex.5</a>
 <br>
 <h3>Lab 3</h3>  
-    <a href="Labs/Lab3/DrawingDrawer/">Drawing Drawer</a>
+    <a href="Labs/Lab3/DrawingDrawer/index.html">Drawing Drawer</a>
     <br><br>
-    <a href="Labs/Lab3/RedRemover/">Red Remover</a>
+    <a href="Labs/Lab3/RedRemover/index.html">Red Remover</a>
     <br><br>
-    <a href="Labs/Lab3/PolarPoints/">Polar Points</a>
+    <a href="Labs/Lab3/PolarPoints/index.html">Polar Points</a>
 </body>
 </html>
