Finished Lab 4 + 2/10/2022 In-Class Work

--- a/index.html
+++ b/index.html
@@ -24,5 +24,12 @@
     <a href="Labs/Lab3/RedRemover/index.html">Red Remover</a>
     <br><br>
     <a href="Labs/Lab3/PolarPoints/index.html">Polar Points</a>
+<br>
+<h3>Lab 4</h3>  
+    <a href="Labs/Lab4/DataDisplay/index.html">Data-driven display w/ function</a>
+    <br><br>
+    <a href="Labs/Lab4/VirtualPet/index.html">Virtual "Pet"</a>
+    <br><br>
+    <a href="Labs/Lab4/WorldWrap/index.html">World Wrap Refactor</a>
 </body>
 </html>
