Semi-complete Lab 5

--- a/Labs/Lab5/McDivns/index.html
+++ b/Labs/Lab5/McDivns/index.html
@@ -6,15 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Cowher - Lab 5 - McDiv'ns</title>
 
+    <!-- styles the div with a width/height and a background color for visibility -->
     <style>
         #mcDiv {
-            width: 100px;
-            height: 100px;
+            width: 1000px;
+            height: 1000px;
+            background-color:  #808080;
         }
     </style>
 </head>
 <body>
-
+    <!-- creates the div with id "mcDiv" as well as initiating the addMc() function once clicked -->
     <div id="mcDiv" onclick="addMc()"></div>
     
     <script src="js/app.js"></script>
