--- a/Labs/Lab5/OverAndOut/index.html
+++ b/Labs/Lab5/OverAndOut/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Cowher - Lab 5 - Over and Out</title>
-
+    <!--sets the style for the square id - a width/height and starting background color of the square div-->
     <style>
         #square {
             width: 100px;
@@ -16,6 +16,9 @@
 </head>
 <body>
 
+    <!--specifies the div by the id "sqare" as well as provides some events for the user. If the mouse
+    hovers over the div, it will turn black. If it hovers off the div, it will remain blue. This is done
+    using the functions defined in app.js-->
     <div id="square" onmouseover="turnBlack()" onmouseout="turnBlue()"></div>
     
     <script src="js/app.js"></script>
