--- a/index.html
+++ b/index.html
@@ -31,5 +31,12 @@
     <a href="Labs/Lab4/VirtualPet/index.html">Virtual "Pet"</a>
     <br><br>
     <a href="Labs/Lab4/WorldWrap/index.html">World Wrap Refactor</a>
+    <br>
+<h3>Lab 5</h3>  
+    <a href="Labs/Lab5/PeakPixels/index.html">Peak Pixels</a>
+    <br><br>
+    <a href="Labs/Lab5/McDivns/index.html">McDiv'ns</a>
+    <br><br>
+    <a href="Labs/Lab5/OverAndOut/index.html">Over and Out</a>
 </body>
 </html>
