--- a/Labs/Lab5/PeakPixels/index.html
+++ b/Labs/Lab5/PeakPixels/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Cowher - Lab 5 - Peak Pixels</title>
 
+    <!--styles the square id - width/height + background color of green-->
     <style>
         #square {
             width: 100px;
@@ -15,7 +16,8 @@
     </style>
 </head>
 <body>
-
+    <!--defines the div with an id "square" as well as provides an event when the user clicks within
+    the div, calling on the increaseSize() function from app.js-->
     <div id="square" onclick="increaseSize()"></div>
     
     <script src="js/app.js"></script>
