--- a/index.html
+++ b/index.html
@@ -38,5 +38,14 @@
     <a href="Labs/Lab5/McDivns/index.html">McDiv'ns</a>
     <br><br>
     <a href="Labs/Lab5/OverAndOut/index.html">Over and Out</a>
+    <br>
+<h3>Lab 6</h3>  
+    <a href="Labs/Lab6/BigLoop/index.html">Loop, but big</a>
+    <br><br>
+    <a href="Labs/Lab6/BeepBop/index.html">Beep Bop</a>
+    <br><br>
+    <a href="Labs/Lab6/RunnerUp/index.html">Runner Up</a>
+    <br><br>
+    <a href="Labs/Lab6/Favorray/index.html">Favorray</a>
 </body>
 </html>
