--- a/Labs/Lab6/RunnerUp/index.html
+++ b/Labs/Lab6/RunnerUp/index.html
@@ -12,7 +12,7 @@
         #first {
             width: 100px;
             height: 100px;
-            background-color:  #d30000;
+            background-color:  #06b900;#06b900
         }
 
         #second {
@@ -24,7 +24,7 @@
         #third {
             width: 100px;
             height: 100px;
-            background-color:  #06b900;
+            background-color:  #d30000;
         }
     </style>
 </head>
