worked on midterm review exercises

--- a/Labs/MidtermReview/UINav/index.html
+++ b/Labs/MidtermReview/UINav/index.html
@@ -10,32 +10,26 @@
         #aDiv {
             width: 100px;
             height: 100px;
-            background-color:  #ff0000;
         }
         #bDiv {
             width: 100px;
             height: 100px;
-            background-color:  #e5ff00;
         }
         #cDiv {
             width: 100px;
             height: 100px;
-            background-color:  #33ff00;
         }
         #dDiv {
             width: 100px;
             height: 100px;
-            background-color:  #00fff2;
         }
         #eDiv {
             width: 100px;
             height: 100px;
-            background-color:  #0400ff;
         }
         #fDiv {
             width: 100px;
             height: 100px;
-            background-color:  #ff00c8;
         }
     </style>
 </head>
@@ -57,7 +51,7 @@
     <div id="eDiv"></div>
 
     <!--specifies the div by the id "fDiv"-->
-    <div id="fDiv"></div>
+    <div id="fDiv" onclick="divHighlight(fDiv)"></div>
     
     <script src="js/app.js"></script>
 </body>
