finished up midterm exercises + refined index

--- a/Labs/MidtermReview/RockPaperScissors/index.html
+++ b/Labs/MidtermReview/RockPaperScissors/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adam Cowher - Rock Paper Scissors (Guard)</title>
-    <!--sets the style for the mDiv id - a width/height and background color-->
+    <!--sets the style for the various div ids - a width/height and background color-->
     <style>
         #scoreDiv {
             width: 200px;
@@ -42,8 +42,8 @@
 </head>
 <body>
 
-    <!--specifies the div by the id "mDiv", and prompts an event when clicked to run the function 
-        yesNoCheck()-->
+    <!--specifies the divs by their ids - each div runs a respective function aside from scoreDiv
+    and resultsDiv-->
     <div id="scoreDiv"></div>
     <div id="rockDiv" onclick="playRock()"></div>
     <div id="paperDiv" onclick="playPaper()"></div>
