--- a/index.html
+++ b/index.html
@@ -47,5 +47,10 @@
     <a href="Labs/Lab6/RunnerUp/index.html">Runner Up</a>
     <br><br>
     <a href="Labs/Lab6/Favorray/index.html">Favorray</a>
+    <br>
+<h3>Midterm Review</h3>  
+    <a href="Labs/MidtermReview/UINav/index.html">UI Navigation Highlighter</a>
+    <br><br>
+    <a href="Labs/MidtermReview/RockPaperScissors/index.html">Rock Paper Scissors (Guard)</a>
 </body>
 </html>
