--- a/index.html
+++ b/index.html
@@ -52,5 +52,12 @@
     <a href="Labs/MidtermReview/UINav/index.html">UI Navigation Highlighter</a>
     <br><br>
     <a href="Labs/MidtermReview/RockPaperScissors/index.html">Rock Paper Scissors (Guard)</a>
+    <br>
+<h3>Lab 8</h3>  
+    <a href="Labs/Lab8/Greeter/index.html">Greeter</a>
+    <br><br>
+    <a href="Labs/Lab8/PasswordProtected/index.html">Password Protected</a>
+    <br><br>
+    <a href="Labs/Lab8/TipCalculator/index.html">Tip Calculator</a>
 </body>
 </html>
