--- a/index.html
+++ b/index.html
@@ -59,5 +59,12 @@
     <a href="Labs/Lab8/PasswordProtected/index.html">Password Protected</a>
     <br><br>
     <a href="Labs/Lab8/TipCalculator/index.html">Tip Calculator</a>
+    <br>
+<h3>Lab 9</h3>  
+    <a href="Labs/Lab9/Cleanup/index.html">Cleanup</a>
+    <br><br>
+    <a href="Labs/Lab9/Divisibility/index.html">Is Divisible By Seven</a>
+    <br><br>
+    <a href="Labs/Lab9/MakeRandom/index.html">Make Random</a>
 </body>
 </html>
