--- a/Labs/Lab10/JustAverage/index.html
+++ b/Labs/Lab10/JustAverage/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adam Cowher - Is Divisible By Seven</title>
+    <title>Adam Cowher - It's Just Average</title>
 </head>
 <body>
 
-    <!--specifies the input box, button, and result div-->
-    <input id="inputNum"> <br />
-    <button onclick="divisibilityResult()">Divisible by 7?</button>
-    <div id="resultDiv"></div>
+    <!--specifies the input box, button, and result divs-->
+    <input id="userString"> <br />
+    <button onclick="addAvgNum()">Add + Average</button>
+    <div id="sumDiv"></div>
+    <div id="avgDiv"></div>
     <script src="js/app.js"></script>
 </body>
 </html>
