--- a/index.html
+++ b/index.html
@@ -66,5 +66,12 @@
     <a href="Labs/Lab9/Divisibility/index.html">Is Divisible By Seven</a>
     <br><br>
     <a href="Labs/Lab9/MakeRandom/index.html">Make Random</a>
+    <br>
+<h3>Lab 10</h3>  
+    <a href="Labs/Lab10/BadWordCatcherArray/index.html">Bad Word Catcher (Array Method)</a>
+    <br><br>
+    <a href="Labs/Lab10/BadWordCatcherLoops/index.html">Bad Word Catcher (Loops Method)</a>
+    <br><br>
+    <a href="Labs/Lab10/JustAverage/index.html">It's Just Average</a>
 </body>
 </html>
