--- a/index.html
+++ b/index.html
@@ -73,5 +73,12 @@
     <a href="Labs/Lab10/BadWordCatcherLoops/index.html">Bad Word Catcher (Loops Method)</a>
     <br><br>
     <a href="Labs/Lab10/JustAverage/index.html">It's Just Average</a>
+    <br>
+<h3>Lab 11</h3>  
+    <a href="Labs/Lab11/ColorChanger/index.html">Color Changer</a>
+    <br><br>
+    <a href="Labs/Lab11/ColorMixer/index.html">Color Mixer</a>
+    <br><br>
+    <a href="Labs/Lab11/FlashCards/index.html">Flash Cards</a>
 </body>
 </html>
