finished final project

--- a/index.html
+++ b/index.html
@@ -80,5 +80,8 @@
     <a href="Labs/Lab11/ColorMixer/index.html">Color Mixer</a>
     <br><br>
     <a href="Labs/Lab11/FlashCards/index.html">Flash Cards</a>
+    <br>
+<h3>Final Project</h3>  
+    <a href="Labs/FinalProject/Concentration/index.html">Concentration</a>
 </body>
 </html>
